syntax = "proto3";

package clutch.config.service.shortlink.v1;

option go_package = "github.com/lyft/clutch/backend/api/config/service/shortlink/v1;shortlinkv1";

message Config {
  // Hash chars is the list of characters that will be used when generating the hash.
  // By default its set to [a-zA-Z0-9]
  string hash_chars = 1;
  // This sets the length of the hash being generated.
  // By default its set to 10
  int64 hash_length = 2;
}

